--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
       ECR_REPOSITORY: ${{ vars.ECR_REPOSITORY }}
       APP_RUNNER_SERVICE_NAME: ${{ vars.APP_RUNNER_SERVICE_NAME }}
       APP_RUNNER_ECR_ACCESS_ROLE_ARN: ${{ vars.APP_RUNNER_ECR_ACCESS_ROLE_ARN }}
+      DEPLOY_MAX_ATTEMPTS: 90 # 15 minutes max (90×10s)
 
     outputs:
       service_url: ${{ steps.get-url.outputs.service_url }}
@@ -28,14 +29,13 @@ jobs:
       - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::604100153348:role/S-Demo-GitHubActions-AppRunnerRole
+          role-to-assume: ${{ vars.AWS_GITHUB_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # 🔹 Enable Docker Buildx and caching
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -53,15 +53,14 @@ jobs:
           IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:${IMAGE_TAG}
           docker buildx build \
             --cache-from=type=local,src=/tmp/.buildx-cache \
-            --cache-to=type=local,dest=/tmp/.buildx-cache-new \
+            --cache-to=type=local,dest=/tmp/.buildx-cache,mode=max \
             --push -t $IMAGE_URI .
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
       - name: Deploy to App Runner (create if missing)
         run: |
-          SERVICE_ARN=$(aws apprunner list-services \
-            --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE_NAME'].ServiceArn" \
+          SERVICE_ARN=$(aws apprunner list-services --no-paginate \
+            --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE_NAME'].ServiceArn | [0]" \
             --output text --region $AWS_REGION)
 
           if [ -z "$SERVICE_ARN" ] || [ "$SERVICE_ARN" == "None" ]; then
@@ -80,17 +79,17 @@ jobs:
 
       - name: Wait for App Runner deployment to complete
         run: |
-          SERVICE_ARN=$(aws apprunner list-services \
-            --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE_NAME'].ServiceArn" \
+          SERVICE_ARN=$(aws apprunner list-services --no-paginate \
+            --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE_NAME'].ServiceArn | [0]" \
             --output text --region $AWS_REGION)
 
           echo "Waiting for deployment to complete... ⏳"
-          for i in {1..60}; do
+          for i in $(seq 1 $DEPLOY_MAX_ATTEMPTS); do
             STATUS=$(aws apprunner describe-service \
               --service-arn $SERVICE_ARN \
               --query "Service.Status" \
               --output text --region $AWS_REGION)
-            echo "Current service status: $STATUS"
+            echo "Attempt $i: Current status → $STATUS"
 
             if [ "$STATUS" == "RUNNING" ]; then
               echo "✅ Deployment successful!"
@@ -103,15 +102,15 @@ jobs:
           done
 
           if [ "$STATUS" != "RUNNING" ]; then
-            echo "❌ Timed out waiting for service to become RUNNING."
+            echo "❌ Timed out after $DEPLOY_MAX_ATTEMPTS attempts."
             exit 1
           fi
 
       - name: Get App Runner URL
         id: get-url
         run: |
-          SERVICE_ARN=$(aws apprunner list-services \
-            --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE_NAME'].ServiceArn" \
+          SERVICE_ARN=$(aws apprunner list-services --no-paginate \
+            --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE_NAME'].ServiceArn | [0]" \
             --output text --region $AWS_REGION)
           SERVICE_URL=$(aws apprunner describe-service \
             --service-arn $SERVICE_ARN \
